# sfml-map-editor

./: .gitattributes  .gitignore  README.md
mapeditor/: CMakeLists.txt  main.cpp  tilemap.cpp  tilemap.h  tilepalette.cpp  tilepalette.h
